# web

./: .gitignore  CNAME  Cargo.toml  README.md
.github/workflows/: static.yml
components/: complex_diagram.js  index.htm  simple_diagram.js  unicode_password.js
src/: lib.rs
web/: complex.css  complex.htm  index.htm  simple.css  simple.htm
web/js/: artimonist_wasm.js  artimonist_wasm_bg.wasm
